--- a/src/app/pages/external-services/components/zoom-meeting/zoom-meeting.component.html
+++ b/src/app/pages/external-services/components/zoom-meeting/zoom-meeting.component.html
@@ -1,41 +1,55 @@
-<ion-item>
-  <ion-label>Nombre de Usuario:</ion-label>
-  <ion-input type="text" [(ngModel)]="userName"></ion-input>
-</ion-item>
+<div *ngIf="meetingType === 'couch'">
+  <ion-list>
+    <ion-list-header>
+      <ion-label>Iniciar reunión en Zoom</ion-label>
+    </ion-list-header>
+    <ion-item *ngIf="!isLogged">
+      <ion-label position="stacked">Nombre de Usuario o Email:</ion-label>
+      <ion-input type="text" [(ngModel)]="userName"></ion-input>
+    </ion-item>
 
-<ion-item>
-  <ion-label>Contraseña:</ion-label>
-  <ion-input type="password" [(ngModel)]="password"></ion-input>
-</ion-item>
+    <ion-item *ngIf="!isLogged">
+      <ion-label position="stacked">Contraseña:</ion-label>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
+    </ion-item>
 
+    <ion-grid>
+      <ion-row>
+        <ion-col *ngIf="!isLogged">
+          <ion-button expand="block" color="success" (click)="login()" [disabled]="isLogged" >
+            <ion-icon slot="start" name="log-in"></ion-icon> Iniciar Sesión
+          </ion-button>
+        </ion-col>
+        <ion-col *ngIf="isLogged">
+          <ion-button expand="block" color="danger" (click)="logout()" [disabled]="!isLogged">
+            <ion-icon slot="start" name="log-out"></ion-icon> Cerrar Sesión
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col *ngIf="isLogged">
+          <ion-button expand="block" color="primary" (click)="joinMeeting()" [disabled]="!isLogged">
+            <ion-icon slot="start" name="videocam"></ion-icon> Iniciar reunión en Zoom
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+</div>
 
-<ion-item>
-  <ion-label>Nombre:</ion-label>
-  <ion-input type="text" [(ngModel)]="displayName"></ion-input>
-</ion-item>
-
-<ion-item>
-  <ion-label>Id del Meeting:</ion-label>
-  <ion-input type="text" [(ngModel)]="meetingNumber"></ion-input>
-</ion-item>
-
-<ion-item>
-  <ion-label>Contraseña del Meeting:</ion-label>
-  <ion-input type="password" [(ngModel)]="meetingPassword"></ion-input>
-</ion-item>
-
-<ion-button expand="block" (click)="login()">
-  <ion-icon slot="start" name="star"></ion-icon> Iniciar Sesión en Zoom
-</ion-button>
-
-<ion-button expand="block" (click)="logout()">
-  <ion-icon slot="start" name="star"></ion-icon> Cerrar Sesión en Zoom
-</ion-button>
-
-<ion-button expand="block" (click)="startMeeting()">
-  <ion-icon slot="start" name="star"></ion-icon> Iniciar reunión en Zoom
-</ion-button>
-
-<ion-button expand="block" (click)="joinMeeting()">
-  <ion-icon slot="start" name="star"></ion-icon> Unirse reunión en Zoom
-</ion-button>
+<div *ngIf="meetingType === 'user'">
+  <ion-list>
+    <ion-list-header>
+      <ion-label>Iniciar reunión en Zoom</ion-label>
+    </ion-list-header>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" class="ion-text-center">
+          <ion-button expand="" color="primary" (click)="joinMeeting()">
+            <ion-icon slot="start" name="videocam"></ion-icon> Unirse a la reunión en Zoom
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+</div>
