feat: Creación de la vista de Mi Perfil

--- a/src/app/pages/auth/my-profile/my-profile.page.html
+++ b/src/app/pages/auth/my-profile/my-profile.page.html
@@ -1,9 +1,49 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>my-profile</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
+
+  <ion-card>
+    <ion-card-header class="ion-text-center">
+      <img class="avatar" src="./assets/icon/fitness.png" alt="Imagen de perfil" >
+      <ion-card-title>Nombres Apellidos</ion-card-title>
+      <ion-card-subtitle>XX años</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+
+      <ion-grid class="ion-text-center">
+        <ion-row>
+          <ion-col>
+            <ion-card>
+              <ion-card-content>
+                <ion-label><h2>Mi peso</h2></ion-label>
+                <ion-label><h1>XX.X kg</h1></ion-label>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+
+          <ion-col>
+            <ion-card>
+              <ion-card-content>
+                <ion-label><h2>Mi altura</h2></ion-label>
+                <ion-label><h1>XX.X cm</h1></ion-label>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <ion-button>Ver mis Estados</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
