feat: Unión de subscripción y catálogo de música al tabs

--- a/src/app/pages/external-services/components/zoom-meeting/zoom-meeting.component.html
+++ b/src/app/pages/external-services/components/zoom-meeting/zoom-meeting.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="meetingType === 'couch'">
+<div *ngIf="meetingType === 'coach'">
   <ion-list>
     <ion-list-header>
-      <ion-label>Iniciar reunión en Zoom</ion-label>
+      <h3>Iniciar reunión en Zoom</h3>
     </ion-list-header>
     <ion-item *ngIf="!isLogged">
       <ion-label position="stacked">Nombre de Usuario o Email:</ion-label>
