--- a/src/app/pages/external-services/zoom-meeting/zoom-meeting.page.html
+++ b/src/app/pages/external-services/zoom-meeting/zoom-meeting.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <app-zoom-meeting meetingType="user" meetingNumber="9602768563" meetingPassword="Q2pnZWFwWXBtMjg1d0RzamtzZnpJdz09" displayName="El EddZ"></app-zoom-meeting>
+  <app-zoom-meeting meetingType="coach" meetingNumber="9602768563" meetingPassword="Q2pnZWFwWXBtMjg1d0RzamtzZnpJdz09" displayName="El EddZ"></app-zoom-meeting>
 </ion-content>
