--- a/src/app/pages/subscription/update-subscription/update-subscription.page.html
+++ b/src/app/pages/subscription/update-subscription/update-subscription.page.html
@@ -1,10 +1,17 @@
-<ion-header>
+<ion-header [translucent]="true">
+  <app-name-icon></app-name-icon>
   <ion-toolbar>
-    <ion-title>update-subscription</ion-title>
+    <ion-title> Subscripción </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Subscripción</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-grid>
     <ion-row>
       <ion-col>
