--- a/src/app/pages/auth/edit-profile/edit-profile.page.html
+++ b/src/app/pages/auth/edit-profile/edit-profile.page.html
@@ -1,9 +1,77 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>edit-profile</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
+
+  <ion-card>
+    <ion-card-header class="ion-text-center">
+      <ion-card-title>Editar mi perfil</ion-card-title>
+
+      <ion-grid class="ion-content-justify-center">
+        <ion-row>
+          <ion-col>
+            <ion-card>
+              <ion-card-header class="ion-text-center">
+                <img class="avatar" src="./assets/icon/fitness.png" >
+              </ion-card-header>
+
+              <ion-card-content>
+                <ion-button>Cambiar Imagen</ion-button>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-grid class="ion-content-justify-center">
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="stacked">Nombre</ion-label>
+              <ion-input></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-label position="stacked">Apellido</ion-label>
+              <ion-input></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label>Actualiza tu peso (kg)</ion-label>
+              <ion-input type="number" min="0"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label>Actualiza tu altura (cm)</ion-label>
+              <ion-input type="number" min="0"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+
+        <ion-row class="ion-text-center">
+          <ion-col>
+            <ion-button>
+              <ion-icon slot="start" name="save"></ion-icon>
+              Guardar Cambios
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
