--- a/src/app/pages/states/states.page.html
+++ b/src/app/pages/states/states.page.html
@@ -17,12 +17,16 @@
   <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
     <ion-slide *ngFor="let state of states | async" 
       style="width: 200px; height: 400px; border: 2px solid #3700ff; border-radius: 20px;">
-      <ion-col>
-        <h6>Correo</h6>
-        <ion-label>{{state.title}}</ion-label>
-        <p>{{state.description}}</p>
-        <ion-img style="pointer-events:none;" [src]="state.image?.url"></ion-img>
-      </ion-col>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Usuario</ion-card-title>
+          </ion-card-header>
+          <ion-img style="pointer-events:none;" [src]="state.image?.url"></ion-img>
+          <ion-card-title>{{state.title}}</ion-card-title>
+          <ion-card-content>
+            <p>{{state.description}}</p>
+          </ion-card-content>
+        </ion-card>
     </ion-slide>
   </ion-slides>
 
