--- a/src/app/pages/states/states.page.html
+++ b/src/app/pages/states/states.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" scroll-y="false">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Estados</ion-title>
@@ -14,21 +14,25 @@
   </ion-header>
 
   <h2 style="text-align: center;">Mira todos los estados</h2>
-  <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
-    <ion-slide *ngFor="let state of states | async" 
-      style="width: 200px; height: 400px; border: 2px solid #3700ff; border-radius: 20px;">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>Usuario</ion-card-title>
-          </ion-card-header>
-          <ion-img style="pointer-events:none;" [src]="state.image?.url"></ion-img>
-          <ion-card-title>{{state.title}}</ion-card-title>
-          <ion-card-content>
-            <p>{{state.description}}</p>
-          </ion-card-content>
-        </ion-card>
-    </ion-slide>
-  </ion-slides>
+
+  <div class="center-content">
+    <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+      <ion-slide *ngFor="let state of states | async" class="borderSlide">
+          <ion-card class="center-content">
+            <div>
+              <ion-card-header>
+                <ion-card-title>Usuario</ion-card-title>
+              </ion-card-header>
+                <ion-img style="pointer-events:none;" [src]="state.image?.url"></ion-img>
+              <ion-card-content>
+                <h4>{{state.title}}</h4>
+                <p>{{state.description}}</p>
+              </ion-card-content>
+            </div>
+          </ion-card>
+      </ion-slide>
+    </ion-slides>
+  </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="newState()">
