--- a/src/app/pages/external-services/song-catalog/song-catalog.page.html
+++ b/src/app/pages/external-services/song-catalog/song-catalog.page.html
@@ -1,15 +1,18 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>song-catalog</ion-title>
+    <app-name-icon></app-name-icon>
+    <ion-title> Inspírate con Música</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Inspírate con Música</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
   <ion-list>
-    <ion-list-header>
-      Inspírate con Música
-    </ion-list-header>
     <ion-item *ngFor="let song of songList" class="item">
       <ion-avatar slot="start" class="song-img">
         <ion-img [src]="song.header_image_thumbnail_url" alt="Imagen de portada para la canción {{ song.title }}"></ion-img>
