--- a/src/app/pages/subscription/cancel-subscription/cancel-subscription.page.html
+++ b/src/app/pages/subscription/cancel-subscription/cancel-subscription.page.html
@@ -34,6 +34,12 @@
         </ion-card>
       </ion-col>
     </ion-row>
+  </ion-grid>
+
+</ion-content>
+
+<ion-footer>
+  <ion-grid>
     <ion-row >
       <ion-col>
         <ion-button expand="block" (click)="onRouterHome()">
@@ -42,5 +48,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
-</ion-content>
+</ion-footer>
