--- a/src/app/pages/external-services/song-catalog/song-catalog.page.html
+++ b/src/app/pages/external-services/song-catalog/song-catalog.page.html
@@ -2,6 +2,27 @@
   <ion-toolbar>
     <app-name-icon></app-name-icon>
     <ion-title> Inspírate con Música</ion-title>
+    <br/>
+    
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row class="ion-align-items-center">
+          <ion-col size="10" class="ion-align-self-end">
+            <ion-searchbar placeholder="Buscar Canciones" [(ngModel)]="word"></ion-searchbar>
+          </ion-col>
+          <ion-col size="2" class="ion-align-self-start">
+            <ion-button color="tertiary" (click)="onSearch()">
+              <ion-icon slot="icon-only" name="search"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="loading">
+          <ion-col>
+            <ion-progress-bar type="indeterminate"></ion-progress-bar>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-toolbar>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +33,15 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-list>
+    <ion-item *ngIf="songList?.length == 0">
+      <ion-label>
+        <h2>No se encontraron Canciones</h2>
+      </ion-label>
+    </ion-item>
     <ion-item *ngFor="let song of songList" class="item">
       <ion-avatar slot="start" class="song-img">
         <ion-img [src]="song.header_image_thumbnail_url" alt="Imagen de portada para la canción {{ song.title }}"></ion-img>
