--- a/src/app/pages/auth/complete-profile/complete-profile.page.scss
+++ b/src/app/pages/auth/complete-profile/complete-profile.page.scss
@@ -1,3 +1,10 @@
 agm-map {
     height: 300px;
 }
+
+.avatar {
+    vertical-align: middle;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+}
