--- a/src/app/pages/auth/complete-profile/complete-profile.page.html
+++ b/src/app/pages/auth/complete-profile/complete-profile.page.html
@@ -11,7 +11,7 @@
           <ion-col>
             <ion-card>
               <ion-card-header class="ion-text-center">
-                  <img class="avatar" [src]="'user.profilePhoto'" />
+                  <img class="avatar" [src]="user.profilePhoto" />
               </ion-card-header>
 
               <ion-card-content>
