fix: Correciones en el formulario de Completar Perfil

--- a/src/app/pages/auth/complete-profile/complete-profile.page.html
+++ b/src/app/pages/auth/complete-profile/complete-profile.page.html
@@ -24,12 +24,12 @@
           <ion-col>
             <ion-item>
               <ion-label class="ion-text-center" position="floating">Peso (kg)</ion-label>
-              <ion-input type="number" inputmode="decimal" min="0"></ion-input>
+              <ion-input [(ngModel)]="user.weight" type="number" inputmode="decimal" min="0"></ion-input>
             </ion-item> <br><br>
             
             <ion-item>
               <ion-label class="ion-text-center" position="floating">Altura (cm)</ion-label>
-              <ion-input type="number" inputmode="decimal" min="0"></ion-input>
+              <ion-input [(ngModel)]="user.height" type="number" inputmode="decimal" min="0"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -38,7 +38,7 @@
           <ion-col size="10">
             <ion-item>
               <ion-label class="ion-text-center" position="stacked">Fecha de Nacimiento</ion-label>
-              <ion-input type="date"></ion-input>
+              <ion-input [(ngModel)]="user.birthday" type="date"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -47,7 +47,7 @@
           <ion-col size="10">
             <ion-item>
               <ion-label class="ion-text-center" position="floating">Número de teléfono</ion-label>
-              <ion-input type="tel" inputmode="tel"></ion-input>
+              <ion-input [(ngModel)]="user.phoneNumber" type="tel" inputmode="tel"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -56,14 +56,14 @@
           <ion-col>
             <ion-item>
               <ion-label class="ion-text-center" position="floating">Nombre</ion-label>
-              <ion-input type="string" inputmode="string"></ion-input>
+              <ion-input [(ngModel)]="user.name" type="text" inputmode="text"></ion-input>
             </ion-item>
           </ion-col>
 
           <ion-col>
             <ion-item>
               <ion-label class="ion-text-center" position="floating">Apellido</ion-label>
-              <ion-input type="string" inputmode="string"></ion-input>
+              <ion-input [(ngModel)]="user.lastname" type="text" inputmode="text"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -94,18 +94,18 @@
 
             <ion-item>
               <ion-label class="ion-text-center" position="floating">ID meeting</ion-label>
-              <ion-input type="string"></ion-input>
+              <ion-input [(ngModel)]="user.zoomIdMeeting" type="text"></ion-input>
             </ion-item>
 
             <ion-item>
               <ion-label class="ion-text-center" position="floating">Password meeting</ion-label>
-              <ion-input type="string"></ion-input>
+              <ion-input [(ngModel)]="user.zoomPasswordMeeting" type="password"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
 
-      <ion-button expand="block">Continuar</ion-button>
+      <ion-button (click)="updateUser()" expand="block">Continuar</ion-button>
     </ion-card-content>
   </ion-card>
 
