fix: Adaptación de las vistas del módulo Auth

--- a/src/app/pages/auth/complete-profile/complete-profile.page.html
+++ b/src/app/pages/auth/complete-profile/complete-profile.page.html
@@ -1,9 +1,21 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <app-name-icon></app-name-icon>
+    <ion-title class="ion-text-center"> Completa tu perfil </ion-title> <br/>
+  </ion-toolbar>
+</ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title> Completa tu perfil </ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-card>
-    <ion-card-header>
+    <!-- <ion-card-header>
       <ion-card-title class="ion-text-center">Completa tu perfil</ion-card-title>
-    </ion-card-header>
+    </ion-card-header> -->
 
     <ion-card-content>
       <ion-grid>
