--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -1,10 +1,16 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>register</ion-title>
+    <app-name-icon></app-name-icon>
+    <ion-title class="ion-text-center"> Completa tu perfil </ion-title> <br/>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title> Completa tu perfil </ion-title>
+    </ion-toolbar>
+  </ion-header>
 
     <ion-grid>
       <ion-row class="ion-justify-content-center">
