--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -28,7 +28,7 @@
               <ion-label>Usuario</ion-label>
               <ion-icon name="man"></ion-icon>
             </ion-segment-button>
-            <ion-segment-button value="coach">
+            <ion-segment-button value="coach-tmp">
               <ion-label>Entrenador</ion-label>
               <ion-icon name="barbell"></ion-icon>
             </ion-segment-button>
@@ -44,7 +44,7 @@
           </ion-item>
           <ion-item>
             <ion-label class="ion-text-center" position="floating">Contraseña</ion-label>
-            <ion-input [(ngModel)]="user.password" name="password" type="password"></ion-input>
+            <ion-input [(ngModel)]="password" name="password" type="password"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
