--- a/src/app/pages/external-services/song-catalog/song-catalog.page.html
+++ b/src/app/pages/external-services/song-catalog/song-catalog.page.html
@@ -29,7 +29,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Inspírate con Música</ion-title>
+      <ion-title>Inspírate con Música</ion-title>
     </ion-toolbar>
   </ion-header>
 
