fix: edición de vista para estados

--- a/src/app/pages/social/components/take-photo/take-photo.component.html
+++ b/src/app/pages/social/components/take-photo/take-photo.component.html
@@ -1,10 +1,10 @@
 
 <div style="text-align: center;">
   <ion-button color="dark" (click)="takePhoto()" *ngIf="source=='photo'">  
-    <ion-icon name="camera-outline"></ion-icon>
+    <ion-icon name="camera-outline"></ion-icon> Cámara
   </ion-button>
   
   <ion-button color="dark" (click)="getImage()" *ngIf="source!=='photo'">  
-    <ion-icon name="image-outline"></ion-icon>
+    <ion-icon name="image-outline"></ion-icon> Galería
   </ion-button>
 </div>
