--- a/src/app/pages/social/new-session/new-session.page.html
+++ b/src/app/pages/social/new-session/new-session.page.html
@@ -1,4 +1,5 @@
 <ion-header [translucent]="true">
+  <app-name-icon></app-name-icon>
   <ion-toolbar>
     <ion-title *ngIf="schedule.id == null">
       Sesión #{{number}}
