fix: edición de vista de sesiones del entrenador

--- a/src/app/pages/social/start-session-coach/start-session-coach.page.html
+++ b/src/app/pages/social/start-session-coach/start-session-coach.page.html
@@ -1,4 +1,5 @@
 <ion-header [translucent]="true">
+  <app-name-icon></app-name-icon>
   <ion-toolbar>
     <ion-title>Iniciar Sesión</ion-title>
   </ion-toolbar>
