fix: Registro con cuenta de Google

--- a/src/app/pages/auth/complete-profile/complete-profile.page.html
+++ b/src/app/pages/auth/complete-profile/complete-profile.page.html
@@ -117,7 +117,7 @@
         </ion-row>
       </ion-grid>
 
-      <ion-button (click)="updateUser()" expand="block">Continuar</ion-button>
+      <ion-button (click)="completeProfile()" expand="block">Continuar</ion-button>
     </ion-card-content>
   </ion-card>
 
