--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="subscription">
+    <ion-tab-button tab="subscription-update">
       <ion-icon name="diamond"></ion-icon>
       <ion-label>Subscripción</ion-label>
     </ion-tab-button>
