fix: Validación en las subscripciones

--- a/src/app/pages/subscription/cancel-subscription/cancel-subscription.page.html
+++ b/src/app/pages/subscription/cancel-subscription/cancel-subscription.page.html
@@ -21,7 +21,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <p>Puedes usar tus privilegios hasta: </p>
+            <p>Puedes usar tus privilegios hasta: {{ nextBill}}</p>
             <br/>
             <ion-img src="./assets/subscription/weightlifting.svg" alt="Imagen motivacional de agradecimiento por los servicios utilizados"
               class="img-logo">
