fix: correciones menores

--- a/src/app/pages/social/start-session-coach/start-session-coach.page.html
+++ b/src/app/pages/social/start-session-coach/start-session-coach.page.html
@@ -15,7 +15,7 @@
   <div style="text-align: center;">
     <h2>Reunión online</h2>
     <ion-card>
-      <h3>Sesión por zoom con Usuario</h3>
+      <h3>Sesión por zoom con {{user.name}}</h3>
       <ion-button>Iniciar la reunión</ion-button>
     </ion-card>
   </div>
