--- a/src/app/pages/social/new-session/new-session.page.html
+++ b/src/app/pages/social/new-session/new-session.page.html
@@ -28,7 +28,7 @@
       <ion-select [(ngModel)]="schedule.day" okText="Aceptar" cancelText="Cancelar" placeholder="Seleccione uno">
         <ion-select-option value="Lunes">Lunes</ion-select-option>
         <ion-select-option value="Martes">Martes</ion-select-option>
-        <ion-select-option value="Miercoles">Miercoles</ion-select-option>
+        <ion-select-option value="Miercoles">Miércoles</ion-select-option>
         <ion-select-option value="Jueves">Jueves</ion-select-option>
         <ion-select-option value="Viernes">Viernes</ion-select-option>
       </ion-select>
@@ -49,7 +49,7 @@
       <ion-label>Sesión</ion-label>
       <ion-select placeholder="Seleccione uno" [(ngModel)]="schedule.type">
         <ion-select-option value="Online">Online</ion-select-option>
-        <ion-select-option value="Precencial">Precensial</ion-select-option>
+        <ion-select-option value="Presencial">Presencial</ion-select-option>
       </ion-select>
     </ion-item>
 
@@ -71,8 +71,8 @@
   </div>
 
   <div style="text-align: center;" *ngIf="schedule.id != null &&
-  schedule.type == 'Precencial'">
-    <h3>Sesión Precensial</h3>
+  schedule.type == 'Presencial'">
+    <h3>Sesión Presencial</h3>
     <ion-card>
       <ion-label>
         <h1>Horario</h1>
